# Omiver-Website

./: .gitignore  Caddyfile  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.prod.sh  main.py  pyproject.toml  requirements.txt  test_query.py
api/: ai_utils.py  barcode_manager.py  mock.http  order_manager.py  serializer.py  test_barcode_lookup.py  test_barcode_manager.py  test_order_manager.py  tests.py  urls.py  views.py
backup-script/: backup-db.sh  restore-db.sh
backup-scripts/: backup-db.sh  restore-db.sh
components/custom_slider/: custom_slider.css  custom_slider.html  custom_slider.py
components/demo_modal/: demo_modal.py
components/ibutton/: ibutton.py
components/setting_item/: setting_item.py
core/: admin.py  encryption.py  fields.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_client_type_alter_client_table.py  0002_membership_paymentinfo_shippinginfo.py  0003_alter_client_type.py  0003_remove_kitbarcodeassignment_order_number_and_more.py  0003_testkit_biomarker_category_biomarker_optimal_max_and_more.py  0004_alter_profile_date_of_birth.py  0004_client_referral_code_client_referred_by.py  0004_kitbarcodeassignment_collected_at.py  0005_client_bio_client_location_client_profile_pic.py  0005_remove_client_dietary_recall_and_more.py  0005_remove_profile_client_client_profile.py  0006_alter_order_status_recommendation.py  0006_kitresult_alter_order_status_kitcollection.py  0009_alter_client_user.py  (+37 more)
dashboard/: rest.http
fixtures/: biomarker.json  init.json  testkit.json
omiver_website/: settings.py  urls.py
(+20 files in other folders)
