[project]
name = "omiver-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.9.1",
    "django==5.2.4",
    "django-browser-reload==1.21.0",
    "django-components==0.141.5",
    "django-cors-headers>=4.9.0",
    "djangorestframework==3.16.1",
    "gunicorn==21.2.0",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.1",
    "sqlparse==0.5.3",
    "drf-spectacular>=0.28.0",
    "stripe>=15.0.1",
]
